@@ -1,4 +1,4 @@
 setlocal
 set OGROOT=[[OGROOT]]
-start /b javaw -cp . -Dlog4j.configuration="file:[[LOG4J]]" -Djava.ext.dirs=lib -Xms64m -Xmx1024m org.ourgrid.worker.ui.async.Main
+start /b javaw -cp .;./lib/* -Dlog4j.configuration="file:[[LOG4J]]" -Dvbox.home="[[VBOXBIN]]" -Xms64m -Xmx1024m org.ourgrid.worker.ui.async.Main
 endlocal
